--- a/0x00/Makefile
+++ b/0x00/Makefile
@@ -1,6 +1,6 @@
 all:
-	gcc -fno-stack-protector -z execstack -D_FORTIFY_SOURCE=0 -m32 target.c -o target_m32
-	gcc -fno-stack-protector -z execstack -D_FORTIFY_SOURCE=0 -m64 target.c -o target_m64
+	gcc -fno-stack-protector -z execstack -D_FORTIFY_SOURCE=0 -no-pie -m32 target.c -o target_m32
+	gcc -fno-stack-protector -z execstack -D_FORTIFY_SOURCE=0 -no-pie -m64 target.c -o target_m64
 	echo 0 > /proc/sys/kernel/randomize_va_space
 clean:
 	rm target_m32 target_m64
